# robofest_rover_ws

./: .gitignore  PHYSICAL_TUNING_INDEX.md  README.md  documentation.md  requirements.txt
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/config/: costmap.yaml  nav2_params.yaml  rover_params.yaml  rtabmap.yaml  slam.yaml
src/rover_bringup/launch/: navigation.launch.py  perception_test.launch.py  rover.launch.py  sim_test.launch.py  slam_3d.launch.py
src/rover_comm/: package.xml  setup.cfg  setup.py
src/rover_comm/rover_comm/: map_stream_node.py  telemetry_node.py  video_stream_node.py
src/rover_control/: package.xml  setup.py
src/rover_control/rover_control/: esp32_bridge.py  mock_esp32.py  motor_interface.py  odometry_node.py
src/rover_description/urdf/: rover.urdf
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/msg/: Lane.msg  Obstacle.msg  RoverStatus.msg  TerrainCell.msg  TerrainMap.msg  TerrainMap3D.msg
src/rover_interfaces/srv/: RegisterCheckpoint.srv
src/rover_navigation/: package.xml  setup.py
src/rover_navigation/rover_navigation/: goal_manager.py  lane_costmap_layer.py  planner_helper.py
src/rover_perception/: package.xml  setup.py
src/rover_perception/rover_perception/: depth_processor.py  lane_detector.py  laptop_depth_camera.py  mock_camera.py  obstacle_detector.py  qr_scanner.py  realsense_node.py  terrain_mapper.py
