<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for the autonomous rover</description>
  <maintainer email="kingsrishxd@gmail.com">srish</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rover_interfaces</exec_depend>
  <exec_depend>rover_perception</exec_depend>
  <exec_depend>rover_control</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_comm</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
